--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/assets/images"
+              "src/assets/images",
+              "src/CNAME"
             ],
             "styles": [
               "src/styles.scss",
