--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,7 @@
           },
           "configurations": {
             "production": {
-              "baseHref": "/nweiland-website/",
+              "baseHref": "./",
               "budgets": [
                 {
                   "type": "initial",
